added 'code coverage' support the build script. Run 'coverage' target, and look @ the build/sandbox/reports/coverage directory to see the results !